# TridentIOS

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  SECURITY_AND_LEGAL_NOTICE.md  cd  package-lock.json  pyproject.toml
.state/: active_mission
cases/: case_manager.py
cases/CASE-0001/: mission.json
cases/CASE-0002/: mission.json
cases/CASE-0003/: mission.json
cases/CASE-0004/: mission.json
cases/CASE-0005/: mission.json
cases/CASE-0006/: mission.json
cases/CASE-0007/: mission.json
cases/CASE-0008/: mission.json
cases/CASE-0009/: mission.json
cases/CASE-0010/: mission.json
cases/CASE-0011/: mission.json
cases/CASE-0012/: mission.json
cases/CASE-0013/: mission.json
cases/CASE-0014/: mission.json
cases/CASE-0015/: mission.json
cases/CASE-0016/: mission.json
cases/CASE-0017/: mission.json
cases/CASE-0018/: mission.json
cases/CASE-0019/: mission.json
cases/CASE-0020/: mission.json
cases/CASE-0021/: mission.json
cases/CASE-0022/: mission.json
cases/CASE-0023/: mission.json
cases/CASE-0024/: mission.json
cases/CASE-0025/: mission.json
cases/CASE-0026/: mission.json
cases/CASE-0027/: mission.json
cases/CASE-0028/: mission.json
cases/CASE-0029/: mission.json
cases/CASE-0030/: mission.json
cli/: main.py  observer_dashboard.py  observer_shell.py
cli/cli/: observer_shell.py
command/: medusa.py
core/: medusa.py
docs/: CHANGELOG.md
knowledge/: README.md:
loom/: HISTORY.md
scripts/: new_observation.py  sync-skill-content.sh  test_species.py
skills/: INDEX.md
templates/: Challenge_Intake.md  OBSERVATION_TEMPLATE.md
tests/: conftest.py  test_storage_isolation.py  test_timezone_aware_timestamps.py
(+1178 files in other folders)
