[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trident-ios"
version = "0.2.0"
description = "Trident IOS - Intelligence Operating System"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Prevail" }
]

dependencies = [
    "rich>=13.0.0",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.13.0",
]

[project.scripts]
trident = "cli.entrypoint:main"
medusa = "cli.entrypoint:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*","core*"]
namespaces = true
